# ssh-monitoring

./: Cargo.toml  LICENSE  README.md
src/: main.rs  ssh_config.rs
src/app/: mod.rs  state.rs
src/app/ssh_details/: mod.rs  view.rs
src/app/ssh_list/: host_info_component.rs  mod.rs  render_host_row.rs  system_metrics_component.rs  table_theme.rs  update.rs  view.rs
src/app/states/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  os.rs  ssh_hosts.rs  ssh_limits.rs  ssh_status.rs  ssh_utils.rs
src/app/tasks/: cpu_status_task.rs  disk_task.rs  executor.rs  gpu_task.rs  memory_task.rs  mod.rs  os_task.rs  queue.rs  ssh_status_task.rs  task.rs  timer.rs
src/app/views/: detail.rs  list.rs  mod.rs
src/metrics/cpu/: model.rs  task.rs
src/metrics/disk/: model.rs  task.rs
src/metrics/mem/: mod.rs  model.rs  task.rs
src/task/: core.rs
