[package]
name = "ssh-monitoring"
version = "0.1.0"
description = "monitor your pcs via ssh"
authors = ["Akira Noda <61897166+tsugumi-sys@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "6.0.0"
eyre = "0.6.12"
futures = "0.3.31"
home = "0.5.11"
ratatui = "0.29.0"
regex = "1.11.1"
ssh2 = "0.9.5"
ssh2-config = "0.5.4"
tokio = { version = "1.40.0", features = ["full"] }
