[package]
name = "ssh-monitoring"
version = "0.1.0"
description = "monitor your pcs via ssh"
authors = ["Akira Noda <61897166+tsugumi-sys@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
eyre = "0.6.12"
futures = "0.3.31"
home = "0.5.11"
md5 = "0.8.0"
ratatui = "0.29.0"
regex = "1.11.1"
ssh2 = "0.9.5"
ssh2-config = "0.5.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
